static/css/parts/SearchField.css
.SearchFieldContainer {
  contain: strict;
  display: flex;
  height: 26px;
}

.SearchField {
  display: flex;
  border: 1px solid var(--InputBoxBorder, rgb(55, 65, 63));
  background: var(--InputBoxBackground, rgb(36, 41, 42));
  contain: strict;
  height: 26px;
  flex-grow: 1;
}

.SearchFieldButtons {
  padding-top: 2px;
  padding-right: 2px;
  contain: content;
  display: flex;
  gap: 2px;
}

.SearchFieldButton {
  position: relative;
  background: transparent;
  border: 1px solid transparent;
  color: white;
  contain: strict;
  width: 20px;
  height: 20px;
  cursor: pointer;
  padding: 1px;
}

.SearchFieldButton:focus-visible {
  outline: 1px solid #3d5252;
  outline-offset: -1px;
}

.SearchFieldButton:where(:hover) {
  background: rgba(90, 93, 94, 0.31);
}

.SearchFieldButtonChecked {
  border-color: #a03f9b;
}

.SearchButtonReplaceAll {
  position: relative;
}

